--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -46,6 +46,7 @@
   caret-color: var(--clr-accent);
   outline: none;
   background: transparent;
+  width: 150px;
 }
 
 .header__doc-title {
