--- a/src/sass/globals/_reset.scss
+++ b/src/sass/globals/_reset.scss
@@ -10,7 +10,7 @@ html {
 
 body,
 html {
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 img {
